--- a/templates/admin_licencia.html
+++ b/templates/admin_licencia.html
@@ -11,6 +11,7 @@
     <button type="submit">Crear y activar</button>
   </form>
   <p><strong>Descargar DB:</strong> <a href="{{ url_for('admin_download_db') }}">Descargar database.db</a> (solo admins)</p>
+  <p><strong>Subir DB:</strong> <a href="{{ url_for('admin_upload_db') }}">Subir database.db</a> (solo admins)</p>
 </section>
 
 <section style="margin-bottom:30px;" id="requests-section">
